--- a/app/views/resources/index.html.erb
+++ b/app/views/resources/index.html.erb
@@ -8,6 +8,7 @@
       <th>Url</th>
       <th>Interval</th>
       <th>Nature</th>
+      <th>Status</th>
       <th>User</th>
       <th colspan="3"></th>
     </tr>
@@ -19,6 +20,7 @@
         <td><%= resource.url %></td>
         <td><%= resource.interval %></td>
         <td><%= resource.nature %></td>
+        <td><%= resource.status %></td>
         <td><%= resource.user %></td>
         <td><%= link_to 'Show', resource %></td>
         <td><%= link_to 'Edit', edit_resource_path(resource) %></td>
