--- a/app/views/partials/dashboards/shared/footer/_footer.html.erb
+++ b/app/views/partials/dashboards/shared/footer/_footer.html.erb
@@ -1,5 +1,5 @@
 <footer>
   <div class="footer-area">
-    <p>© Copyright 2019. 2RC.</p>
+    <p>© Copyright 2019. github.com/caws.</p>
   </div>
 </footer>
