--- a/app/views/resources/edit.html.erb
+++ b/app/views/resources/edit.html.erb
@@ -1,6 +1,3 @@
-<h1>Editing Resource</h1>
+<%= content_for :area_title, 'Editing Resource' %>
 
 <%= render 'form', resource: @resource %>
-
-<%= link_to 'Show', @resource %> |
-<%= link_to 'Back', resources_path %>
