--- a/app/views/resources/new.html.erb
+++ b/app/views/resources/new.html.erb
@@ -1,5 +1,3 @@
-<h1>New Resource</h1>
+<%= content_for :area_title, 'Creating Resource' %>
 
 <%= render 'form', resource: @resource %>
-
-<%= link_to 'Back', resources_path %>
