--- a/app/views/resources/show.html.erb
+++ b/app/views/resources/show.html.erb
@@ -1,24 +1,3 @@
-<p id="notice"><%= notice %></p>
+<%= content_for :area_title, 'Showing Resource' %>
 
-<p>
-  <strong>Url:</strong>
-  <%= @resource.url %>
-</p>
-
-<p>
-  <strong>Interval:</strong>
-  <%= @resource.interval %>
-</p>
-
-<p>
-  <strong>Nature:</strong>
-  <%= @resource.nature %>
-</p>
-
-<p>
-  <strong>User:</strong>
-  <%= @resource.user %>
-</p>
-
-<%= link_to 'Edit', edit_resource_path(@resource) %> |
-<%= link_to 'Back', resources_path %>
+<%= render 'form', resource: @resource %>
