--- a/app/views/partials/dashboards/admin_dashboard/sidebar/_sidebar.html.erb
+++ b/app/views/partials/dashboards/admin_dashboard/sidebar/_sidebar.html.erb
@@ -15,13 +15,10 @@
               <i class="fa fa-dashboard"></i> <span>Dashboard</span>
             <% end %>
           </li>
-
           <li class="<%= "active" if controller_name == "resources" %>">
-            <a href="javascript:void(0)" aria-expanded="true"><i class="ti-layout-sidebar-left"></i><span>Resources
-                                    </span></a>
-            <ul class="collapse">
-              <li class="<%= "active" if controller_name == "resources" %>"><%= link_to 'Resources', resources_path %></li>
-            </ul>
+            <%= link_to resources_path do %>
+              <i class="fa fa-arrows"></i> <span>Resources</span>
+            <% end %>
           </li>
         </ul>
       </nav>
