Add crude search mechanism to resources

--- a/app/views/resources/_resource_table.html.erb
+++ b/app/views/resources/_resource_table.html.erb
@@ -54,6 +54,9 @@
               <% end %>
               </tbody>
             </table>
+            <ul class="pagination justify-content-center" style="margin:20px 0">
+              <%= paginate @resources %>
+            </ul>
           </div>
         </div>
       </div>
