Add websocket base structure to project

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -31,3 +31,5 @@
 <%= render 'resource_table', resources: @resources %>
 
 <%= render 'log_table', logs: @logs %>
+
+<%= link_to '', dashboard_index_path, id: 'dashboard_page', remote: true, hidden: '' %>
