--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,35 +1,12 @@
 <%= content_for :area_title, 'Dashboard' %>
 
-<!-- seo fact area start -->
-<div class="col-lg-12">
-  <div class="row">
-    <div class="col-md-6 mt-5 mb-3">
-      <div class="card">
-        <div class="seo-fact sbg1">
-          <div class="p-4 d-flex justify-content-between align-items-center">
-            <div class="seofct-icon"><i class="ti-arrow-up"></i> Resources UP</div>
-            <h2><%= @resources_up.count %></h2>
-          </div>
-          <canvas id="seolinechart1" height="5"></canvas>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-6 mt-md-5 mb-3">
-      <div class="card">
-        <div class="seo-fact sbg2">
-          <div class="p-4 d-flex justify-content-between align-items-center">
-            <div class="seofct-icon"><i class="ti-arrow-down"></i> Resources DOWN</div>
-            <h2><%= @resources_down.count %></h2>
-          </div>
-          <canvas id="seolinechart2" height="5"></canvas>
-        </div>
-      </div>
-    </div>
-  </div>
+<div id="main-dashboard">
+  <%= render 'main_dashboard',
+             resources_up: @resources_up,
+             resources_down: @resources_down,
+             logs: @logs,
+             resources: @resources
+  %>
 </div>
-
-<%= render 'resource_table', resources: @resources %>
-
-<%= render 'log_table', logs: @logs %>
 
 <%= link_to '', dashboard_index_path, id: 'dashboard_page', remote: true, hidden: '' %>
