Logs can now be browsed and searched.

--- a/app/views/partials/dashboards/admin_dashboard/sidebar/_sidebar.html.erb
+++ b/app/views/partials/dashboards/admin_dashboard/sidebar/_sidebar.html.erb
@@ -20,6 +20,11 @@
               <i class="fa fa-arrows"></i> <span>Resources</span>
             <% end %>
           </li>
+          <li class="<%= "active" if controller_name == "logs" %>">
+            <%= link_to logs_path do %>
+              <i class="fa fa-file-text"></i> <span>Logs</span>
+            <% end %>
+          </li>
         </ul>
       </nav>
     </div>
