--- a/app/views/dashboard/_log_table.html.erb
+++ b/app/views/dashboard/_log_table.html.erb
@@ -1,46 +1,54 @@
-
 <div class="row">
   <!-- Progress Table start -->
   <div class="col-12 mt-3">
     <div class="card">
       <div class="card-body">
         <h4 class="header-title">Logs</h4>
-        <div class="single-table">
-          <div class="table-responsive">
-            <table class="table table-hover progress-table text-center">
-              <thead class="text-uppercase">
-              <tr>
-                <th scope="col">ID</th>
-                <th scope="col">Resource URL</th>
-                <th scope="col">Response Code</th>
-                <th scope="col">Exception</th>
-                <th scope="col">Created At</th>
-                <th scope="col">Actions</th>
-              </tr>
-              </thead>
-              <tbody>
-              <% logs.each do |log| %>
-                <tr>
-                  <td><%= log.id %></td>
-                  <td><%= log.resource.url %></td>
-                  <td><%= log.response_code %></td>
-                  <td><%= log.exception %></td>
-                  <td><%= log.created_at %></td>
-                  <td>
-                    <ul class="d-flex justify-content-center">
-                      <li>
-                        <%= link_to log, method: :delete, data: {confirm: 'Are you sure?'}, class: 'text-danger' do %>
-                          <i class="ti-trash"></i> Delete
-                        <% end %>
-                      </li>
-                    </ul>
-                  </td>
-                </tr>
-              <% end %>
-              </tbody>
-            </table>
-          </div>
-        </div>
+
+        <pre class="language-shell-session">
+          <code class="language-shell-session">
+              ID          Response Code     Exception       Created At                  Resource URL
+            <% logs.each do |log| %>
+              <%= "%06d" % log.id.to_i %>      <%= log.response_code %>               <%= log.exception || 'No Exception' %>    <%= log.created_at %>     <%= log.resource.url %>
+            <% end %>
+          </code>
+        </pre>
+<!--        <div class="single-table">-->
+<!--          <div class="table-responsive">-->
+<!--            <table class="table table-hover progress-table text-center">-->
+<!--              <thead class="text-uppercase">-->
+<!--              <tr>-->
+<!--                <th scope="col">ID</th>-->
+<!--                <th scope="col">Resource URL</th>-->
+<!--                <th scope="col">Response Code</th>-->
+<!--                <th scope="col">Exception</th>-->
+<!--                <th scope="col">Created At</th>-->
+<!--                <th scope="col">Actions</th>-->
+<!--              </tr>-->
+<!--              </thead>-->
+<!--              <tbody>-->
+              <%# logs.each do |log| %>
+<!--                <tr>-->
+<!--                  <td><%#= "%06d" % log.id.to_i %></td>-->
+<!--                  <td><%#= log.resource.url %></td>-->
+<!--                  <td><%#= log.response_code %></td>-->
+<!--                  <td><%#= log.exception %></td>-->
+<!--                  <td><%#= log.created_at %></td>-->
+<!--                  <td>-->
+<!--                    <ul class="d-flex justify-content-center">-->
+<!--                      <li>-->
+                        <%#= link_to log, method: :delete, data: {confirm: 'Are you sure?'}, class: 'text-danger' do %>
+<!--                          <i class="ti-trash"></i> Delete-->
+                        <%# end %>
+<!--                      </li>-->
+<!--                    </ul>-->
+<!--                  </td>-->
+<!--                </tr>-->
+              <%# end %>
+<!--              </tbody>-->
+<!--            </table>-->
+<!--          </div>-->
+<!--        </div>-->
       </div>
     </div>
   </div>
