Add email notifications when a resource is down and when it comes back up. Add contacts CRUD, user now can setup contact emails that are going to be reached when a server changes status.

--- a/app/views/partials/dashboards/admin_dashboard/sidebar/_sidebar.html.erb
+++ b/app/views/partials/dashboards/admin_dashboard/sidebar/_sidebar.html.erb
@@ -25,6 +25,11 @@
               <i class="fa fa-file-text"></i> <span>Logs</span>
             <% end %>
           </li>
+          <li class="<%= "active" if controller_name == "contacts" %>">
+            <%= link_to contacts_path do %>
+              <i class="fa fa-group"></i> <span>Contacts</span>
+            <% end %>
+          </li>
         </ul>
       </nav>
     </div>
