Add search form to contacts

--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -1,5 +1,7 @@
 <%= content_for :area_title, 'Contacts' %>
 
+<%= render 'search_partial' %>
+
 <div class="row">
   <!-- Progress Table start -->
   <div class="col-12 mt-3">
