--- a/app/views/partials/dashboards/admin_dashboard/page/_page_title_area.html.erb
+++ b/app/views/partials/dashboards/admin_dashboard/page/_page_title_area.html.erb
@@ -14,8 +14,8 @@
 <!--        <img class="avatar user-thumb" src="assets/images/author/avatar.png" alt="avatar">-->
         <h4 class="user-name dropdown-toggle" data-toggle="dropdown"><%= current_user.email %><i class="fa fa-angle-down"></i></h4>
         <div class="dropdown-menu">
-          <a class="dropdown-item" href="#">Message</a>
-          <a class="dropdown-item" href="#">Settings</a>
+<!--          <a class="dropdown-item" href="#">Message</a>-->
+<!--          <a class="dropdown-item" href="#">Settings</a>-->
           <%= link_to 'Log out', destroy_user_session_path, class: 'dropdown-item', method: :delete %>
         </div>
       </div>
