Add (annoying) sound notification when a URL goes down. Add Howler.js

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,7 @@
 <% else %>
   <%= yield %>
 <% end %>
-
+<%= audio_tag "warning.wav", class: "audio-play" %>
 <%= javascript_include_tag 'srt', 'data-turbolinks-track': 'reload' %>
 </body>
 </html>
