Replace logo with Infarma's logo. Set post login route to the dashboard.

--- a/app/views/partials/dashboards/admin_dashboard/sidebar/_sidebar.html.erb
+++ b/app/views/partials/dashboards/admin_dashboard/sidebar/_sidebar.html.erb
@@ -1,7 +1,7 @@
 <div class="sidebar-menu">
   <div class="sidebar-header">
     <div class="logo">
-      <a><%= image_tag 'logo.png', style: 'height: 80px' %></a>
+      <a><%= image_tag 'logo.png', class: 'img-fluid' %></a>
     </div>
   </div>
   <div class="main-menu">
